--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginVertical="15dp"
+        android:visibility="gone"
         android:gravity="center"
         android:orientation="vertical">
 
