--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,63 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:strokeWidth="0dp"
-    app:cardElevation="0dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="0dp"
-    app:cardBackgroundColor="@color/white">
+    app:cardElevation="0dp"
+    app:strokeWidth="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:gravity="center"
+        android:orientation="horizontal"
         android:padding="12dp">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="100dp"
             app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="100dp"
             app:cardElevation="0dp"
             app:strokeWidth="0dp">
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/arrow_left"
-                android:layout_margin="10dp" />
+                android:layout_margin="10dp"
+                android:src="@drawable/arrow_left" />
 
         </com.google.android.material.card.MaterialCardView>
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/title"
-            android:textSize="16sp"
+            android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:lines="1"
-            android:layout_marginStart="10dp"
+            android:textSize="16sp"
             tools:text="@string/app_name" />
+
+        <Button
+            android:visibility="gone"
+            android:id="@+id/addNew"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add new" />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="100dp"
-            app:cardBackgroundColor="@color/grey3"
             android:visibility="gone"
+            app:cardBackgroundColor="@color/grey3"
+            app:cardCornerRadius="100dp"
             app:cardElevation="0dp"
             app:strokeWidth="0dp">
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/rotate"
-                android:layout_margin="10dp" />
+                android:layout_margin="10dp"
+                android:src="@drawable/rotate" />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -65,17 +72,17 @@
             android:id="@+id/share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="100dp"
-            app:cardBackgroundColor="@color/grey3"
-            app:cardElevation="0dp"
             android:visibility="gone"
+            app:cardBackgroundColor="@color/grey3"
+            app:cardCornerRadius="100dp"
+            app:cardElevation="0dp"
             app:strokeWidth="0dp">
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/share_nodes_solid"
-                android:layout_margin="10dp" />
+                android:layout_margin="10dp"
+                android:src="@drawable/share_nodes_solid" />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -83,9 +90,9 @@
             android:id="@+id/stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="100dp"
-            app:cardBackgroundColor="@color/transparent"
             android:visibility="gone"
+            app:cardBackgroundColor="@color/transparent"
+            app:cardCornerRadius="100dp"
             app:cardElevation="0dp"
             app:strokeWidth="0dp">
 
