--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -91,8 +91,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:cardBackgroundColor="@color/transparent"
+            app:cardBackgroundColor="@color/grey3"
             app:cardCornerRadius="100dp"
+            android:layout_marginStart="5dp"
             app:cardElevation="0dp"
             app:strokeWidth="0dp">
 
@@ -100,6 +101,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/stop_sign"
+                android:layout_margin="10dp"
                 app:tint="@color/red" />
 
         </com.google.android.material.card.MaterialCardView>
