--- a/app/src/main/res/layout/fragment_documents.xml
+++ b/app/src/main/res/layout/fragment_documents.xml
@@ -19,6 +19,13 @@
             android:orientation="vertical"
             android:padding="12dp">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:layout_marginTop="10dp"
+                android:text="The following contacts are available for services within your chosen category." />
+
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,6 +61,13 @@
 
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:layout_marginTop="10dp"
+                android:text="Feel free to attach any document or image to further clarify your request (optional)." />
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
