--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -271,7 +271,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="Select or add requests"
+            android:text=""
             android:textColor="@color/green"
             android:textStyle="bold" />
 
