--- a/app/src/main/res/layout/current_programs.xml
+++ b/app/src/main/res/layout/current_programs.xml
@@ -19,7 +19,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Attach Documents" />
+            android:text="Attached Documents - Tap to Open or Download"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/currentPrograms"
